<resources>
    <string name="app_name">sifreli_mesajlasma</string>
    <string name="action_settings">Ayarlar</string>
    <string name="userName">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="oldPassword">Eski Şifre</string>
    <string name="newPassword">Yeni Şifre</string>
    <string name="signIn">Giriş Yap</string>
    <string name="signUp">Kayıt Ol</string>
    <string name="nameSurname">Ad Soyad</string>
    <string name="update">Güncelle</string>
    <string name="sendAmessage">Mesaj gönder</string>
    <string name="confirmPassword">Şifreyi Onayla</string>
    <string name="empty">Lütfen tüm alanların doldurulduğundan emin olunuz.</string>
    <string name="passwordConfirmProblem">Girdiğiniz şifreler eşleşmiyor.</string>
    <string name="reRegister">Sisteme zaten kayıtlısınız.</string>
    <string name="UserRegisrationMessage">Başarıyla kayıt oldunuz.</string>
    <string name="usernameOrPasswordInCorrect">Hatalı giriş</string>
    <string name="DeleteMessageQuestion">Mesajları silmek istediğine emin misin?</string>
    <string name="NotDeleted">Silinemedi</string>
    <string name="checkPassword">Lütfen şifrenizi kontrol ediniz.</string>
    <string name="updateInformation">Bilgileriniz güncellendi.</string>
    <string name="tryAgain">Oppps bir hata oluştu. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="emptyListView">Mesaj kutunuz boş.</string>
</resources>
