<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/theme"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bola.encrypted_message_app.crypted_message.MainActivity">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:enabled="false"
            android:hint="@string/nameSurname"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:padding="10dp"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_default_bg"
            android:hint="@string/userName"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:padding="10dp"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/etOldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:hint="@string/oldPassword"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:hint="@string/newPassword"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/etPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:hint="@string/confirmPassword"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#bbbbbb" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/buton_default_bg"
            android:padding="10dp"
            android:text="@string/update" />

    </LinearLayout>
</RelativeLayout>